# aad_client

./: .buildinfo  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.rst  changelog.html  development.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  sonar-project.properties  tox.ini  usage.html
.doctrees/: changelog.doctree  development.doctree  environment.pickle  index.doctree  usage.doctree
.github/workflows/: pipeline.yml
_modules/: index.html
_modules/aad_client/: authorisation.html
_sources/: changelog.rst.txt  development.rst.txt  index.rst.txt  usage.rst.txt
_static/: documentation_options.js
docs/source/: conf.py  development.rst  index.rst  usage.rst
src/aad_client/: __init__.py  _version.py  authorisation.py
tests/unit/: test_placeholder.py
